src/objects/CapitalCall__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <label>Commitment</label>
        <referenceTo>Commitment__c</referenceTo>
        <relationshipName>Drawdowns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Capital Call</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{MM}-{YY}-{0000}</displayFormat>
        <label>Drawdown Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>